--- a/Spherum.Mobile/AppShell.xaml
+++ b/Spherum.Mobile/AppShell.xaml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<Shell
-    x:Class="Spherum.Mobile.AppShell"
-    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:Spherum.Mobile"
-    Shell.FlyoutBehavior="Disabled"
-    Title="Spherum.Mobile">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
-
+<Shell x:Class="Spherum.Mobile.AppShell"
+       xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+       xmlns:home="clr-namespace:Spherum.Mobile.Views.Home"
+       FlyoutBehavior="Disabled"
+       Title="Spherum.Mobile">
+    <ShellContent Title="Home"
+                  ContentTemplate="{DataTemplate home:HomePage}"
+                  Route="HomePage" />
 </Shell>
